<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context="com.androidhehe.riga.damarauriga_1202150007_modul4.CariGambar">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cari_gambar"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ed_cari_gambar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_url_gambar" />

    <Button
        android:id="@+id/btn_cari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/klik_untuk_mencari_gambar"
        android:onClick="cariGambar"/>

    <ImageView
        android:id="@+id/iv_cari"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>
</LinearLayout>
